importer/flux-with-importer/service-based/image-related-controller.yaml
# == export: image-automation / begin ==
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
    control-plane: controller
  name: image-automation-controller
  namespace: flux-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-automation-controller
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: image-automation-controller
    spec:
      containers:
      - image: fluxcd/image-automation-controller:v0.14.1
        args:
        - --events-addr=http://notification-controller/
        # == imptr: image-automation-common-args / begin from: ./_deployment_template.yaml#[common-args] indent: align ==
        - --watch-all-namespaces
        - --log-level=info
        - --log-encoding=json
        - --enable-leader-election
        # == imptr: image-automation-common-args / end ==
        # == imptr: image-automation-common-envs / begin from: ./_deployment_template.yaml#[common-envs] indent: align ==
        ports:
        - containerPort: 8080
          name: http-prom
        - containerPort: 9440
          name: healthz
          protocol: TCP
        # == imptr: image-automation-resource-setup / begin from: ./_deployment_template.yaml#[probe-and-resource] indent: align ==
        name: manager
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 64Mi
        # == imptr: image-automation-resource-setup / end ==
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: temp
      securityContext:
        fsGroup: 1337
      serviceAccountName: image-automation-controller
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: temp
# == export: image-automation / end ==

# == export: image-reflector / begin ==
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
    control-plane: controller
  name: image-reflector-controller
  namespace: flux-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-reflector-controller
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: image-reflector-controller
    spec:
      containers:
      - image: fluxcd/image-reflector-controller:v0.11.1
        args:
        - --events-addr=http://notification-controller/
        # == imptr: image-reflector-common-args / begin from: ./_deployment_template.yaml#[common-args] indent: align ==
        - --watch-all-namespaces
        - --log-level=info
        - --log-encoding=json
        - --enable-leader-election
        # == imptr: image-reflector-common-args / end ==
        # == imptr: image-reflector-common-envs / begin from: ./_deployment_template.yaml#[common-envs] indent: align ==
        name: manager
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 64Mi
        # == imptr: image-reflector-resource-setup / end ==
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: temp
        - mountPath: /data
          name: data
      securityContext:
        fsGroup: 1337
      serviceAccountName: image-reflector-controller
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: temp
      - emptyDir: {}
        name: data
# == export: image-reflector / end ==
